--- a/jrolr/tasks/main.yml
+++ b/jrolr/tasks/main.yml
@@ -6,7 +6,7 @@
           state: present
   when: ansible_os_family=="Debian"
 
-- name: i want to install java 8 on ubuntu       
+- name: i want to install java 8 on Redhat       
   yum:
           name: "{{myjavapackforRedhat}}"
           state: present
