--- a/myjavasetup.yml
+++ b/myjavasetup.yml
@@ -2,4 +2,4 @@
 - hosts: webserverhost
   become: yes
   roles:
-        - { role: jrolr , when: ansible_os_family=="Debian" }
+        - { role: jrolr  }
